name:                big-engine-examples
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/psandahl/big-engine-examples#readme
license:             MIT
license-file:        LICENSE
author:              Patrik Sandahl
maintainer:          patrik.sandahl@gmail.com
copyright:           2017 Patrik Sandahl
category:            Graphics
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable empty-window
  hs-source-dirs:      empty-window
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , big-engine
                     , OpenGLRaw
  ghc-options:         -Wall -Werror -O2

executable untransformed-triangle
  hs-source-dirs:      untransformed-triangle
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , big-engine
                     , bytestring
                     , linear
                     , OpenGLRaw
                     , vector
  ghc-options:         -Wall -Werror -O2

executable rotating-triangle
  hs-source-dirs:      rotating-triangle
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , big-engine
                     , bytestring
                     , linear
                     , OpenGLRaw
                     , vector
  ghc-options:         -Wall -Werror -O2

executable dynamic-draw
  hs-source-dirs:      dynamic-draw
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , big-engine
                     , bytestring
                     , linear
                     , OpenGLRaw
                     , vector
  ghc-options:         -Wall -Werror -O2

executable transparant-cat
  hs-source-dirs:      transparant-cat
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , big-engine
                     , bytestring
                     , linear
                     , OpenGLRaw
                     , vector
  ghc-options:         -Wall -Werror -O2

executable cube-map
  hs-source-dirs:      cube-map
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , big-engine
                     , linear
                     , OpenGLRaw
                     , vector
  ghc-options:         -Wall -Werror -O2

executable mouse-picking
  hs-source-dirs:      mouse-picking
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , big-engine
                     , linear
                     , OpenGLRaw
                     , vector
  ghc-options:         -Wall -Werror -O2
